Speed up the gradle test execution